Fixing notification visibility

--- a/Hangman/style.css
+++ b/Hangman/style.css
@@ -117,10 +117,10 @@ h1 {
   border-radius: 10px 10px 0 0;
   padding: 15px 20px;
   position: absolute;
-  bottom: -50px;
+  bottom: -100px;
   transition: transform 0.3s ease-in-out;
 }
 
 .notification-container.show {
-  transform: translateY(-50px);
+  transform: translateY(-100px);
 }
